--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -78,8 +78,8 @@
       <ion-card-content>
         <ion-list lines="none">
           <ion-item button (click)="logout()" class="logout-item">
-            <ion-icon name="log-out-outline" slot="start" color="danger"></ion-icon>
-            <ion-label color="danger">{{ 'COMMON.LOGOUT' | translate }}</ion-label>
+            <ion-icon name="log-out-outline" slot="start"></ion-icon>
+            <ion-label>{{ 'COMMON.LOGOUT' | translate }}</ion-label>
           </ion-item>
         </ion-list>
       </ion-card-content>
